fix: address pre-PR deep-review findings
- BlockSpec normalizes property names and values to lowercase (like the
  material key): a spec written as powered=TRUE now matches instead of
  silently returning false - the sharpest edge in a test framework.
- BlockStateSnapshot keeps its documented property order (Map.copyOf
  discarded it).
- setBlockAt(BlockPos, BlockSpec) documents that placement applies a
  physics update, so attachable/gravity blocks need support first.
- The lever IT reads multiple properties from one frozen snapshot, per
  the API's own consistency guidance.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01P15FjGQzyNmX9T6Qmyq8Dn